--- a/template.env
+++ b/template.env
@@ -38,6 +38,7 @@ REACT_APP_HOST=localhost
 FRONTEND_HOST=frontend
 REACT_APP_BACKEND_HOST=backend
 REACT_APP_WORKFLOW_HOST=workflow
+REACT_APP_DEPLOYMENT=local
 # Logging Configuration
 REACT_APP_LOG_LEVEL=INFO
 # Security
