Working on getting costs / usage working across structures, and visible in the frontend. Added a viewer for messages and an aggregator for task results. Have to adjust it a bit, but task results now aggregate all the usage data of its nodes, allowing you to see the total cost of the task. Found and fixed a few issues, but a lot of work to be done. Tomorrow will update the stable versions with these updates

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -15,10 +15,9 @@ services:
       - /app/node_modules
       - /app/dist
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
-      CHOKIDAR_USEPOLLING: "true"
-      WATCHPACK_POLLING: "true"
       PORT: ${FRONTEND_PORT_DOCKER:-3000}
+    env_file:
+      - .env
 
   backend:
     build:
