--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -23,11 +23,11 @@ COPY --chown=1000:1000 . .
 RUN chown -R 1000:1000 /app
 
 # Expose the application port
-EXPOSE 3000
+EXPOSE $BACKEND_PORT_DOCKER
 
 # Health check to indicate when the service is ready
 HEALTHCHECK --interval=10s --timeout=10s --start-period=30s --retries=20 \
-CMD curl -f http://localhost:3000/api/health || exit 1
+CMD curl -f http://${REACT_APP_BACKEND_HOST}:${BACKEND_PORT_DOCKER}/api/health || exit 1
 
 # Switch to the user with UID 1000
 USER 1000
