Adjusting the docker files

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -138,7 +138,7 @@ services:
   javascript_image:
     build:
       context: .
-      dockerfile: workflow/Dockerfile.js
+      dockerfile: workflow/Dockerfile.javascript
     image: myjs:latest
     command: ["bash"]
 
