--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   frontend:
-    image: ${REGISTRY_PATH}/frontend:latest
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile.dev
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
@@ -8,48 +10,49 @@ services:
         condition: service_healthy
       workflow:
         condition: service_healthy
+    volumes:
+      - ./frontend:/app:consistent
+      - /app/node_modules
+      - /app/dist
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
       PORT: ${FRONTEND_PORT_DOCKER:-3000}
-      CI: "true"
-
-  backend:
-    image: ${REGISTRY_PATH}/backend:latest
-    ports:
-      - "${REACT_APP_BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     env_file:
       - .env
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    ports:
+      - "${REACT_APP_BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
       mongo:
         condition: service_started
       volume-init:
         condition: service_completed_successfully
+    env_file:
+      - .env
     volumes:
+      - ./backend:/app
+      - /app/node_modules
+      - /app/dist
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: ${NODE_ENV:-development}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://${REACT_APP_BACKEND_HOST:-localhost}:${BACKEND_PORT_DOCKER}/api/health"]
+      test: ["CMD", "curl", "-f", "http://${REACT_APP_BACKEND_HOST:-backend}:${BACKEND_PORT_DOCKER}/api/health"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 10s
 
-  redis:
-    image: redis:6.0-alpine
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
   workflow:
-    image: ${REGISTRY_PATH}/workflow:latest
+    build:
+      context: ./workflow
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
@@ -74,31 +77,41 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://${REACT_APP_WORKFLOW_HOST:-localhost}:${WORKFLOW_PORT_DOCKER}/health"]
+      test: ["CMD", "curl", "-f", "http://${REACT_APP_WORKFLOW_HOST:-workflow}:${WORKFLOW_PORT_DOCKER}/health"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 5s
 
+  redis:
+    image: redis:6.0-alpine
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   volume-init:
-    image: busybox
-    attach: false
-    volumes:
-      - ${COMPOSE_PROJECT_DIR}/logs:/logs
-      - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
-      - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache 
-    command: |
-      sh -c "
-        echo 'Starting volume initialization' &&
-        ls -la / &&
-        echo 'Creating directories' &&
-        mkdir -p /logs /shared-uploads /model_cache &&
-        echo 'Setting permissions' &&
-        chmod -R 755 /logs /shared-uploads /model_cache &&
-        chown -R 1000:1000 /logs /shared-uploads /model_cache &&
-        echo 'Finished volume initialization' &&
-        ls -la /logs /shared-uploads /model_cache 
-      "
+      image: busybox
+      attach: false
+      volumes:
+        - ${COMPOSE_PROJECT_DIR}/logs:/logs
+        - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
+        - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache
+      command: |
+        sh -c "
+          echo 'Starting volume initialization' &&
+          ls -la / &&
+          echo 'Creating directories' &&
+          mkdir -p /logs /shared-uploads /model_cache &&
+          echo 'Setting permissions' &&
+          chmod -R 755 /logs /shared-uploads /model_cache &&
+          chown -R 1000:1000 /logs /shared-uploads /model_cache &&
+          echo 'Finished volume initialization' &&
+          ls -la /logs /shared-uploads /model_cache
+        "
 
   mongo:
     image: mongo:latest
@@ -109,15 +122,24 @@ services:
     attach: false
 
   python_image:
-    image: ${REGISTRY_PATH}/mypython:latest
+    build:
+      context: .
+      dockerfile: workflow/Dockerfile.python
+    image: mypython:latest
     command: ["bash"]
 
   bash_image:
-    image: ${REGISTRY_PATH}/mybash:latest
+    build:
+      context: .
+      dockerfile: workflow/Dockerfile.bash
+    image: mybash:latest
     command: ["bash"]
 
   javascript_image:
-    image: ${REGISTRY_PATH}/myjs:latest
+    build:
+      context: .
+      dockerfile: workflow/Dockerfile.javascript
+    image: myjs:latest
     command: ["bash"]
 
 volumes:
