Added encryption to the main references, added oath, and updated the user interface a bit

--- a/template.env
+++ b/template.env
@@ -50,3 +50,6 @@ NODE_ENV=production
 # OTHER
 SHARED_UPLOAD_DIR=/app/shared-uploads
 COMPOSE_PROJECT_DIR=.
+# Optional OAUTH config
+REACT_APP_GOOGLE_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
