--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": ">=4.20.0",
     "express-rate-limit": "^7.4.1",
+    "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.8.3",
     "mongoose-autopopulate": "^1.1.0",
