Added a dev dockerfile for workflow, added the workflow route to backend to use the new way of authenticating itself with the added middleware. Added or fixed the encryption for a few other collections in backend. Created a LoginCard component for the frontend for login and registration, improved the admin tools and created the UserDetail and its dialog.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -32,6 +32,7 @@ CMD curl -f http://${REACT_APP_BACKEND_HOST}:${BACKEND_PORT_DOCKER}/api/health |
 # Switch to the user with UID 1000
 USER 1000
 ENV NODE_ENV=development
-
+ENV CHOKIDAR_USEPOLLING=true
+ENV WATCHPACK_POLLING=true
 # Start the Node.js application
 CMD ["sh", "-c", "npm run build && nodemon --watch src --ext ts --exec 'npm run build && node dist/index.js'"]
