--- a/template.env
+++ b/template.env
@@ -42,9 +42,10 @@ REACT_APP_WORKFLOW_HOST=workflow
 REACT_APP_DEPLOYMENT=local
 # Logging Configuration
 REACT_APP_LOG_LEVEL=INFO
+LOGGING_FOLDER=logs
 # Security
 JWT_SECRET=your_very_long_and_secure_random_string_here
-LOGGING_FOLDER=logs
+WORKFLOW_SERVICE_KEY=workflow_service_key
 # ENV MODE
 NODE_ENV=production
 # OTHER
