--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "express-rate-limit": "^7.4.1",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "8.8.3",
+    "mongoose": ">=8.9.5",
     "mongoose-autopopulate": "^1.1.0",
     "mongoose-schema-jsonschema": "^2.2.0",
     "multer": "^1.4.5-lts.1",
