Well, Threads seems to be properly implemented. There are still a few things (user interactions / chat_resume after a user interaction needs to add thread id to the mix, otherwise it will need to look for the msg in all the chat threads, and maybe some tasks could now return their outputs in a thread instead of in the message list) but everything looks functional. Its quite neat what you can do with it

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,20 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "axios": ">=1.7.4",
+    "chess.js": "^1.0.0",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
     "framer-motion": "^11.3.2",
     "lodash.debounce": "^4.0.8",
     "next": ">=14.2.10",
+    "nth-check": ">=2.0.1",
     "nunjucks": "^3.2.4",
+    "path-to-regexp": ">=0.1.12",
+    "postcss": ">=8.4.6",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chessboard": "^4.7.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.7",
@@ -47,10 +52,7 @@
     "tailwind-merge": "^2.4.0",
     "typescript": "^5.5.4",
     "web-vitals": "^2.1.4",
-    "winston": "^3.13.1",
-    "nth-check": ">=2.0.1",
-    "postcss": ">=8.4.6",
-    "path-to-regexp": ">=0.1.12"
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
